bootstratp son sürüm jquery son sürüm eklendi. sayfa düzenlemeleri yapıldı.

--- a/ShopApp.WebUI/Views/Shared/_PartialNavbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_PartialNavbar.cshtml
@@ -1,4 +1,4 @@
-﻿<nav class="nav navbar-expand-lg navbar-dark navbar-primary fixed-top">
+﻿<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
         <a href="#" class="navbar-brand">Shopping</a>
         <ul class="navbar-nav mr-auto">
@@ -26,6 +26,8 @@
             <li class="nav-item">
                 <a href="#" class="nav-link">Admin Categories</a>
             </li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a href="#" class="nav-link">Login</a>
             </li>
@@ -38,3 +40,4 @@
         </ul>
     </div>
 </nav>
+    
