bir takım düzenlemeler

--- a/ShopApp.WebUI/Views/_ViewImports.cshtml
+++ b/ShopApp.WebUI/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using ShopApp.Entities.Concrete
+@using  ShopApp.WebUI.Models
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
