--- a/ShopApp.WebUI/Views/Shop/List.cshtml
+++ b/ShopApp.WebUI/Views/Shop/List.cshtml
@@ -11,5 +11,6 @@
                 <partial name="_PartialProduct" for="@product" />
             }
         </div>
+        <div page-model="@Model.PagingInfo"></div>
     </div>
 </div>
