--- a/ShopApp.WebUI/wwwroot/css/style.css
+++ b/ShopApp.WebUI/wwwroot/css/style.css
@@ -5,3 +5,16 @@
 .mt-10 {
     margin-top: 10px;
 }
+
+.w30{
+    width: 30px;
+}
+.w12 {
+    width: 12px;
+}
+.w100 {
+    width: 100px;
+}
+.w140 {
+    width: 140px;
+}
