--- a/ShopApp.WebUI/Views/_ViewImports.cshtml
+++ b/ShopApp.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ShopApp.Entities.Concrete
 @using  ShopApp.WebUI.Models
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper ShopApp.WebUI.TagHelpers.*,ShopApp.WebUI
