--- a/ShopApp.WebUI/Views/Admin/CreateCategory.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CreateCategory.cshtml
@@ -1,41 +1,41 @@
-﻿@model ProductModel
+﻿
 @{
-    ViewData["Title"] = "EditProduct";
+    ViewData["Title"] = "CreateCategory";
 }
 
-<h1>Edit Product</h1>
+<h1>CreateCategory</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="Edit" method="post">
-            <input type="hidden" name="Id" value="@Model.Id" />
+        <form asp-controller="Admin" asp-action="CreateProduct" method="post">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Name">Name</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="Name" value="@Model.Name" />
+                    <input class="form-control" asp-for="Name" value="" />
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="ImageURL">ImageURL</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="ImageURL" id="ImageURL" value="@Model.ImageURL" />
+                    <input class="form-control" asp-for="ImageURL" id="ImageURL" value="" />
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Description">Description</label>
                 <div class="col-md-10">
-                    <textarea id="editor" asp-for="Description" class="form-control">@Model.Description</textarea>
+                    <textarea id="editor" asp-for="Description" class="form-control"></textarea>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Price">Price</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="Price" id="Price" value="@Model.Price" />
+                    <input class="form-control" asp-for="Price" id="Price" value="" />
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-md-10 offset-md-2">
-                    <button type="submit" value="Save Product" class="btn btn-primary">Update Product</button>
+                    <button type="submit" value="Save Product" class="btn btn-primary">Save Product</button>
                 </div>
             </div>
         </form>
