--- a/ShopApp.WebUI/Views/Admin/EditCategory.cshtml
+++ b/ShopApp.WebUI/Views/Admin/EditCategory.cshtml
@@ -1,25 +1,27 @@
 ﻿@model CategoryModel
 @{
-    ViewData["Title"] = "Create Product";
+    ViewData["Title"] = "Edit Category";
 }
 
-<h1>Create Product</h1>
+<h1>EditCategory</h1>
 <hr />
 <div class="row">
     <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="CreateProduct" method="post">
+        <form asp-controller="Admin" asp-action="EditProduct" method="post">
+            <input type="hidden" name="Id" value="@Model.Id" />
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Name">Name</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="Name" value="" />
+                    <input class="form-control" asp-for="Name" value="@Model.Name" />
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-md-10 offset-md-2">
-                    <button type="submit" value="Save Product" class="btn btn-primary">Save Category</button>
+                    <button type="submit" value="Save Product" class="btn btn-primary">Update Category</button>
                 </div>
             </div>
         </form>
     </div>
 </div>
+
 
