--- a/ShopApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -1,9 +1,10 @@
-﻿@model CategoryModel
+﻿@model ProductModel
 @{
-    ViewData["Title"] = "Create Product";
+    ViewData["Title"] = "CreateProduct";
 }
 
-<h1>Create Product</h1>
+    <h1>Create Product</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-8">
@@ -15,8 +16,26 @@
                 </div>
             </div>
             <div class="form-group row">
+                <label class="col-md-2 col-form-label" asp-for="ImageURL">ImageURL</label>
+                <div class="col-md-10">
+                    <input class="form-control" asp-for="ImageURL" id="ImageURL" value="" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label" asp-for="Description">Description</label>
+                <div class="col-md-10">
+                    <textarea id="editor" asp-for="Description" class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label" asp-for="Price">Price</label>
+                <div class="col-md-10">
+                    <input class="form-control" asp-for="Price" id="Price" value="" />
+                </div>
+            </div>
+            <div class="form-group row">
                 <div class="col-md-10 offset-md-2">
-                    <button type="submit" value="Save Product" class="btn btn-primary">Save Category</button>
+                    <button type="submit" value="Save Product" class="btn btn-primary">Save Product</button>
                 </div>
             </div>
         </form>
