--- a/ShopApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/ShopApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -5,9 +5,9 @@
 
 <h1>Edit Product</h1>
 <hr />
-<div class="row">
-    <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="EditProduct" method="post">
+<form asp-controller="Admin" asp-action="EditProduct" method="post">
+    <div class="row">
+        <div class="col-md-8">
             <input type="hidden" name="Id" value="@Model.Id" />
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Name">Name</label>
@@ -38,7 +38,15 @@
                     <button type="submit" value="Save Product" class="btn btn-primary">Update Product</button>
                 </div>
             </div>
-        </form>
+        </div>
+        <div class="col-md-4">
+            @foreach (var item in (List<Category>)ViewBag.Categories)
+            {
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="categoryIds" value="@item.Id" id="category@(item.Id)" @(Model.SelectedCategories.Any(i=>i.Id == item.Id)? "checked" : "") />
+                    <label class="custom-control-label" for="category@(item.Id)">@item.Name</label>
+                </div>
+            }
+        </div>
     </div>
-</div>
-
+</form>
