--- a/ShopApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -2,35 +2,45 @@
 @{
     ViewData["Title"] = "CreateProduct";
 }
+@section Scripts{
 
-    <h1>Create Product</h1>
+    <script src="~/modules/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+}
+
+<h1>Create Product</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-8">
         <form asp-controller="Admin" asp-action="CreateProduct" method="post">
+            <div class="text-danger" asp-validation-summary="All"></div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Name">Name</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="Name" value="" />
+                    <input class="form-control" asp-for="Name" value="@Model.Name" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="ImageURL">ImageURL</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="ImageURL" id="ImageURL" value="" />
+                    <input class="form-control" asp-for="ImageURL" id="ImageURL" value="@Model.ImageURL" />
+                    <span asp-validation-for="ImageURL" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Description">Description</label>
                 <div class="col-md-10">
-                    <textarea id="editor" asp-for="Description" class="form-control"></textarea>
+                    <textarea id="editor" asp-for="Description" class="form-control">@Model.Description</textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-md-2 col-form-label" asp-for="Price">Price</label>
                 <div class="col-md-10">
-                    <input class="form-control" asp-for="Price" id="Price" value="" />
+                    <input class="form-control" asp-for="Price" id="Price" value="@Model.Price" />
+                    <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
