account controller email sender Tempdata config Admin role

--- a/ShopApp.WebUI/Views/Account/ResetPassword.cshtml
+++ b/ShopApp.WebUI/Views/Account/ResetPassword.cshtml
@@ -1,14 +1,16 @@
-﻿@model RegisterModel
+﻿@model ResetPasswordModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "ResetPassword";
 }
+
+
 @section Scripts{
 
     <script src="~/modules/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 }
 
-<h1>Register</h1>
+<h1>Reset Password</h1>
 
 <hr />
 <div class="row">
@@ -19,49 +21,39 @@
                 @ViewBag.ErrorMessage
             </div>
         }
-    <form asp-controller="Account" asp-action="Register" method="post">
+    <form asp-controller="Account" asp-action="ResetPassword" method="post">
         <div class="text-danger" asp-validation-summary="All"></div>
-        <div class="form-group row">
-            <label class="col-md-2 col-form-label" asp-for="FullName"></label>
-            <div class="col-md-10">
-                <input class="form-control" asp-for="FullName" value="@Model.FullName" />
-                <span asp-validation-for="FullName" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-md-2 col-form-label" asp-for="Username"></label>
-            <div class="col-md-10">
-                <input class="form-control" asp-for="Username" id="ImageURL" value="@Model.Username" />
-                <span asp-validation-for="Username" class="text-danger"></span>
-            </div>
-        </div>
+        <input type="hidden" name="Token" value="@Model.Token" />
         <div class="form-group row">
             <label class="col-md-2 col-form-label" asp-for="Email"></label>
             <div class="col-md-10">
-                <input class="form-control" asp-for="Email" id="ImageURL" value="@Model.Email" />
+                <input class="form-control" asp-for="Email" id="Email" value="@Model.Email" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <label class="col-md-2 col-form-label" asp-for="Password"></label>
             <div class="col-md-10">
-                <input class="form-control" asp-for="Password" id="Price" value="@Model.Password" />
+                <input class="form-control" asp-for="Password" id="Password" value="@Model.Password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
         </div>
+
         <div class="form-group row">
             <label class="col-md-2 col-form-label" asp-for="RePassword"></label>
             <div class="col-md-10">
-                <input class="form-control" asp-for="RePassword" id="Price" value="@Model.RePassword" />
+                <input class="form-control" asp-for="RePassword" id="RePassword" value="@Model.RePassword" />
                 <span asp-validation-for="RePassword" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <div class="col-md-10 offset-md-2">
-                <button type="submit" value="Save Product" class="btn btn-primary">Save Product</button>
+                <button type="submit" value="Login" class="btn btn-primary">Reset Password</button>
             </div>
         </div>
     </form>
     </div>
 </div>
+
+
 
