--- a/ShopApp.WebUI/Views/Shared/_PartialProduct.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_PartialProduct.cshtml
@@ -12,7 +12,15 @@
         </div>
         <div class="card-footer text-center">
             <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary btn-sm">Details</a>
-            <a href="" class="btn btn-outline-primary btn-sm ml-3">Add to Cart</a>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <form asp-controller="Cart" asp-action="AddToCart" method="post" style="display:inline;">
+                    <input type="hidden" name="productId" value="@Model.Id" />
+                    <input type="hidden" name="quantity" value="1" />
+                    <button type="submit" class="btn btn-outline-primary btn-sm ml-3">Add to Cart</button>
+                </form>
+            }
+
         </div>
     </div>
 </div>
