--- a/ShopApp.WebUI/Views/Shop/Details.cshtml
+++ b/ShopApp.WebUI/Views/Shop/Details.cshtml
@@ -3,32 +3,45 @@
     ViewData["Title"] = "Details";
 }
 
-    <div class="row">
-        <div class="col-md-3">
-            <img src="~/img/@Model.Product.ImageURL" alt="@Model.Product.Name" class="img-fluid" />
-        </div>
-        <div class="col-md-9">
-            <h1 class="mb-3">
-                @Model.Product.Name
-            </h1>
-            <hr />
-            @foreach (var category in Model.Categories)
-            {
-                <a href="#" class="btn btn-link p-0 mb-3">@category.Name</a>
-            }
+<div class="row">
+    <div class="col-md-3">
+        <img src="~/img/@Model.Product.ImageURL" alt="@Model.Product.Name" class="img-fluid" />
+    </div>
+    <div class="col-md-9">
+        <h1 class="mb-3">
+            @Model.Product.Name
+        </h1>
+        <hr />
+        @foreach (var category in Model.Categories)
+        {
+            <a href="#" class="btn btn-link p-0 mb-3">@category.Name</a>
+        }
 
-            <div class="mb-3">
-                <h4 class="text-primary mb-3">
-                    @Model.Product.Price <i class="fas fa-lira-sign"></i>
-                </h4>
-                <button type="submit" class="btn btn-primary btn-lg">Add To Cart</button>
-            </div>
+        <div class="mb-3">
+            <h4 class="text-primary mb-3">
+                @Model.Product.Price <i class="fas fa-lira-sign"></i>
+            </h4>
+
+
+
+            <form asp-controller="Cart" asp-action="AddToCart" method="post" class="form-inline">
+                <input type="hidden" name="productId" value="@Model.Product.Id" />
+                <div class="input-group mb-3">
+                    <input type="number" name="quantity" class="form-control" value="1" min="1" step="1" style="width:100px;" />
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-cart-plus"></i> Add To Cart
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <p class="p-3">
-                @Html.Raw(Model.Product.Description)
-            </p>
-        </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <p class="p-3">
+            @Html.Raw(Model.Product.Description)
+        </p>
     </div>
+</div>
