--- a/ShopApp.WebUI/Views/Account/Register.cshtml
+++ b/ShopApp.WebUI/Views/Account/Register.cshtml
@@ -58,7 +58,7 @@
         </div>
         <div class="form-group row">
             <div class="col-md-10 offset-md-2">
-                <button type="submit" value="Save Product" class="btn btn-primary">Save Product</button>
+                <button type="submit" value="Save Product" class="btn btn-primary">Register</button>
             </div>
         </div>
     </form>
