--- a/ShopApp.WebUI/Views/Cart/Index.cshtml
+++ b/ShopApp.WebUI/Views/Cart/Index.cshtml
@@ -84,7 +84,7 @@
                     <i class="fa fa-arrow-circle-left fa-fw"></i> Continue Shopping
                 </a>
                 <a href="/checkout" class="btn btn-primary">
-                    <i class="fa fa-arrow-circle-right fa-fw"></i> checkout
+                    <i class="fa fa-arrow-circle-right fa-fw"></i> Checkout
                 </a>
             </div>
         }
