--- a/ShopApp.WebUI/Views/Shared/_PartialNavbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_PartialNavbar.cshtml
@@ -14,7 +14,7 @@
                     <a asp-controller="Cart" asp-action="Index" class="nav-link">Cart</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Orders</a>
+                    <a asp-controller="Cart" asp-action="GetOrders" class="nav-link">Orders</a>
                 </li>
                 if (User.IsInRole("admin"))
                 {
